# edge-ai-suites

.github/: CODEOWNERS
.github/workflows/: industrial-edge-insights-time-series-tests.yml
education-ai-suite/: AGENTS.md  CLAUDE.md  README.md
education-ai-suite/.cursor/rules/: sc.mdc
education-ai-suite/.github/: copilot-instructions.md
education-ai-suite/.github/skills/: README.md  skill-catalog.json
education-ai-suite/.github/skills/sc-doctor/: SKILL.md
education-ai-suite/.github/skills/sc-files/: SKILL.md
education-ai-suite/.github/skills/sc-qa/: SKILL.md
education-ai-suite/.github/skills/sc-setup/: SKILL.md
education-ai-suite/.github/skills/sc-up/: SKILL.md
education-ai-suite/.github/skills/sc-upload/: SKILL.md
education-ai-suite/smart-classroom/: config.yaml  pipeline.py  requirements.txt  setup-smart-classroom.ps1  start-smart-classroom.ps1
education-ai-suite/smart-classroom/Scripts/: check_dlstreamer.ps1
education-ai-suite/smart-classroom/components/: mindmap_component.py  ocr_component.py  summarizer_component.py
education-ai-suite/smart-classroom/components/ocr/: base_ocr.py
education-ai-suite/smart-classroom/components/segmentation/: content_segmentation.py
education-ai-suite/smart-classroom/components/va/: va_pipeline_service.py
education-ai-suite/smart-classroom/content_search/: requirements.txt
education-ai-suite/smart-classroom/content_search/utils/: asset_service.py  file_validator.py  storage_service.py
education-ai-suite/smart-classroom/docs/user-guide/: advance-setup-guide.md  get-started.md
education-ai-suite/smart-classroom/utils/: ensure_model.py  markdown_cleaner.py
education-ai-suite/teacher-assistant-claw-demo/: README.md  run-agent.sh  setup-openclaw-workspace.sh  setup-ovms.sh
education-ai-suite/utils/flutter/: .gitignore  README.md  pubspec.yaml  setup.ps1  start.ps1
education-ai-suite/utils/flutter/assets/: .env
education-ai-suite/utils/flutter/lib/: app_config.dart  main.dart
education-ai-suite/utils/flutter/test/: widget_test.dart
federal-aerospace/apps/deterministic-threat-detection/: README.md
federal-aerospace/apps/handheld-multi-modal/: Makefile
federal-aerospace/apps/handheld-multi-modal/scripts/: filter_models.py
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/: docker-compose.yaml
manufacturing-ai-suite/industrial-edge-insights-multimodal/: docker-compose-vllm.yml  vllm.env
manufacturing-ai-suite/industrial-edge-insights-time-series/: Makefile
manufacturing-ai-suite/industrial-edge-insights-time-series/tests/: README.md
manufacturing-ai-suite/industrial-edge-insights-vision/win-vision-ai/: README.md
metro-ai-suite/image-based-video-search/test/: requirements.txt
metro-ai-suite/live-video-analysis/live-metrics-service/: Dockerfile
metro-ai-suite/live-video-analysis/live-video-alert-agent/: Dockerfile
metro-ai-suite/live-video-analysis/live-video-captioning/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  compose.yaml
metro-ai-suite/metro-sdk-manager/: AGENTS.md
metro-ai-suite/metro-sdk-manager/scripts/: oep-gen-ai-sdk.sh  oep-vision-ai-sdk.sh  visual-ai-demo-kit.sh
metro-ai-suite/metro-vision-ai-app-recipe/smart-intersection/: requirements.txt
metro-ai-suite/smart-route-planning-agent/src/: Dockerfile  pyproject.toml
metro-ai-suite/smart-traffic-intersection-agent/: setup.sh
metro-ai-suite/smart-traffic-intersection-agent/src/: Dockerfile  pyproject.toml
robotics-ai-suite/components/adbscan/: Makefile
robotics-ai-suite/components/fast-mapping/: Makefile
robotics-ai-suite/components/ros-kpi/: CHEATSHEET.txt  INSTALL.md  Makefile  README.md  pyproject.toml
robotics-ai-suite/components/ros-kpi/docs/: COMMANDS.md  IMPROVEMENTS.md
robotics-ai-suite/components/ros-kpi/humble/debian/: changelog
robotics-ai-suite/components/ros-kpi/jazzy/debian/: changelog
robotics-ai-suite/components/ros-kpi/schemas/: kpi_level1_v1.json
robotics-ai-suite/components/ros-kpi/src/: _accel.py  analyze_bag_e2e.py  analyze_trigger_latency.py  generate_report.py  monitor_resources.py  monitor_stack.py  prometheus_exporter.py  show_sessions.py  summarize_benchmark.py  view_average.py  visualize_gpu.py  visualize_graph.py  visualize_kpi.py  visualize_npu.py  visualize_resources.py  visualize_thermal.py  visualize_timing.py  wandering_metrics.py  wandering_run.sh
robotics-ai-suite/components/ros-kpi/tests/: test_generate_report.py  test_trigger_latency.py  test_visualize_kpi.py  test_wandering_metrics.py
robotics-ai-suite/components/simulations/: Makefile  REUSE.toml
robotics-ai-suite/components/simulations/RVC/: README.md  (+1 more)
robotics-ai-suite/components/simulations/RVC/rvc/: CMakeLists.txt  README.md  cyclonedds.xml  package.xml  setup.cfg  setup.py
robotics-ai-suite/components/simulations/RVC/rvc/env-hooks/: rvc.dsv.in
robotics-ai-suite/components/simulations/RVC/rvc/humble/debian/: changelog  control  rules
robotics-ai-suite/components/simulations/RVC/rvc/interface/msg/: BoxState.msg
robotics-ai-suite/components/simulations/RVC/rvc/jazzy/debian/: changelog  control  rules
robotics-ai-suite/components/simulations/RVC/rvc/launch/: rvc.launch.py
robotics-ai-suite/components/simulations/RVC/rvc/params/: gripper_controller.yaml  rvc_bridge.yaml
robotics-ai-suite/components/simulations/RVC/rvc/rviz/: arm1_view.rviz
robotics-ai-suite/components/simulations/RVC/rvc/scripts/: __init__.py  arm1_controller.py  cube_controller.py  moveit2.py
robotics-ai-suite/components/simulations/RVC/rvc/scripts/robots/: ur5.py
robotics-ai-suite/components/simulations/RVC/rvc/test/: test_launch_structure.py  test_ur5_config.py
robotics-ai-suite/components/simulations/RVC/rvc/urdf/intel_ariac_wall/: ceiling_tiled.jpg.license
robotics-ai-suite/components/simulations/RVC/rvc/urdf/marker_0/: model.sdf
robotics-ai-suite/components/wandering/: Makefile
robotics-ai-suite/docs/: requirements.txt
robotics-ai-suite/docs/embodied/: get_started.md  openvino_optimization.md  packages_list.md  release-notes.md
robotics-ai-suite/pipelines/pi05-rtc-ov/: README.md
(+201 files in other folders)
