# Copyright (C) 2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "smart-route-planning-agent"
version = "0.1.0"
description = "Smart Route Planner - Agentic AI based Commuter Support System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium~=0.14",
    "gpxpy~=1.6",
    "gradio~=6.13",
    "langgraph~=1.1",
    "websockets~=16.0"
]
