[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "1.0.0"
name="Smart-Traffic-Intersection-Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.128", # Includes all minor and patch version changes
    "paho-mqtt~=2.1",
    "aiohttp~=3.13",
    "structlog~=23.2.0",
    "gradio~=6.13",
    "markdown~=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=0.21",
    "httpx~=0.25",
    "black~=26.3",
    "flake8~=6.1",
    "mypy~=1.7",
]

[project.scripts]
traffic-intelligence = "traffic_intelligence.main:main"

[tool.hatch.build.targets.wheel]
packages = ["traffic_intelligence"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
